# wildkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/wildkit/content/: __init__.py  characteristics.py  client.py  configurator.py  configurator_categories.py  configurator_colors.py  upload.py
src/wildkit/usecases/: __main__.py  tree.py
